--- a/styles.css
+++ b/styles.css
@@ -30,3 +30,14 @@ footer {
     color: #fff;
     text-align: center;
 }
+
+.sticky-header{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #333;
+    color: #fff;
+    padding: 10px 20px;
+    z-index: 1000;
+}
