--- a/styles.css
+++ b/styles.css
@@ -68,60 +68,36 @@ footer {
 /* Set up a grid container with mixed column sizes */
 .grid-container {
     background-color: var(--primary);
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    grid-gap: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
     padding: 20px;
 }
 
 .grid-item {
-    border: 1px solid #ccc;
+    width: calc(33.33% - 20px); /* 33.33% width with 20px gap */
+    margin-bottom: 20px; /* Add some space between items */
+    box-sizing: border-box; /* Include padding and border in element's total width and height */
+    border: 1px dashed #ccc;
     padding: 20px;
-    text-align: left;
 }
 
-.grid-item img {
-    cursor: pointer;
+.grid-img img {
     max-width: 100%;
     height: auto;
+    display: block; /* This ensures that the image won't cause spacing issues */
+    margin: 0 auto 10px; /* Centers the image and adds some space below */
 }
+
 
 .read-more {
     font-weight: bold; 
     text-decoration: none; 
     color: var(--accent); 
-    
-}
-
-.large {
-    grid-column-end: span 2;
-    grid-row-end: span 2;
-}
-
-.medium {
-    grid-column-end: span 2;
-}
-
-.small {
-    /* Default size, no need for additional styling */
 }
 
 @media screen and (max-width: 768px) {
-    .grid-container {
-        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    }
-
     .grid-item {
-        padding: 10px;
-    }
-
-    .large, .medium {
-        grid-column-end: span 1;
-        grid-row-end: span 1;
-    }
-    
-    .small {
-        grid-column-end: span 2;
-        grid-row-end: span 1;
+        width: calc(50% - 20px); /* 50% width with 20px gap on smaller screens */
     }
 }
